# loan-backend

./: .coverage  .dockerignore  .env.example  .gitignore  Django_Loan_Backend_Plan.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: Actions_n_Tasks.md
fraud/: __init__.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
fraud/migrations/: 0001_initial.py  __init__.py
loan/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
loan/migrations/: 0001_initial.py  0002_loanapplication_purpose.py  __init__.py
loan/views/: __init__.py
loan/views_impl/: __init__.py  actions.py  dashboard.py  detail.py  list_create.py
loan_app/: __init__.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_admin_endpoints.py  test_api.py  test_caching.py  test_fraud_endpoints.py  test_fraudflag_model.py  test_logging.py  test_models.py  test_permissions.py  test_services.py  test_settings.py
tests/integration/admin/approve/: test_admin_approve.py
tests/integration/admin/flag/: test_admin_flag.py
tests/integration/admin/invalid/: test_admin_invalid_actions.py
tests/integration/admin/reject/: test_admin_reject.py
tests/integration/api/: test_auth_flow.py
tests/integration/api/loan/: test_loan_crud.py  (+2 more)
tests/unit/caching/: test_caching.py
tests/unit/fraud/: test_flagged_history_view.py
tests/unit/logging/: test_logging.py
tests/unit/model/: test_fraudflag_model.py  test_loan_string_repr.py  test_loan_withdraw_logic.py
tests/unit/permission/: test_permissions.py
tests/unit/serializers/: test_loan_serializer.py
tests/unit/settings/: test_settings.py  test_settings_env_and_cache.py
tests/unit/views/: test_exec_loan_views_py.py  test_fraud_views_cache.py  test_fraud_views_default_branch.py  test_import_views_py.py  test_reload_views_facade.py  test_views_facade.py  test_views_usage.py  test_withdraw_view.py
tests/unit/wsgi/: test_wsgi.py
users/: __init__.py  serializers.py  urls.py  views.py
users/migrations/: __init__.py
(+11 files in other folders)
