[tool.poetry]
name = "loan-backend"
version = "0.1.0"
description = "Django-based loan application backend"
authors = ["Tare Appah <grillzwitu@gmail.com>"]
license = "None"
readme = "README.md"
packages = [
    { include = "loan_app" },
    { include = "users" },
    { include = "loan" },
    { include = "fraud" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
Django = ">=4.2"
djangorestframework = ">=3.14"
django-environ = ">=0.9.0"
django-cors-headers = ">=4.0,<5"
django-redis = ">=5.2"
psycopg2-binary = ">=2.9"
drf-yasg = ">=1.21.5"
djangorestframework-simplejwt = ">=5.2.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
pytest-django = ">=4.5"
pytest-cov = ">=4.1"
flake8 = ">=5.0"
mypy = ">=1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"